[gd_scene load_steps=2 format=3 uid="uid://do80mwa4182pu"]

[ext_resource type="Script" uid="uid://88wqdcx1abac" path="res://scripts/UI/Pause Menu.gd" id="1_ve6jp"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ve6jp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.223529, 0.223529, 0.694118)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -66.5
offset_right = 132.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button_SAVE" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "SAVE"

[node name="Button_LOAD" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "LOAD"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 140.0
offset_right = 34.0
offset_bottom = 163.0
grow_horizontal = 2
text = "[paused]"

[connection signal="pressed" from="VBoxContainer/Button_SAVE" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_LOAD" to="." method="_on_load_pressed"]
